<resources>
    <string name="app_name">GithubUsers - BFAA Submission 2</string>
    <string name="nama_user">Nama User</string>
    <string name="username">username</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="lives">Lives</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="exit">Exit</string>
    <string name="yakin__keluar">Anda Yakin Ingin Keluar</string>
    <string name="iya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="find_username">Find Username</string>
</resources>
