<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.DetailActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow_white" />

    <ImageView
        android:id="@+id/iv_menu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/menus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="parent" />
    
    <View
        android:id="@+id/view_circle_detail"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:background="@drawable/shape_circle_stroke"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="69dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/iv_profpict"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/user_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_circle_detail"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_user"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_circle_detail"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:layout_marginTop="4dp"/>

    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="73dp"
        android:background="@drawable/shape_row_item"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        android:layout_marginTop="24dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower"
                android:textColor="@color/colorGrey"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="150"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textColor="@color/colorGrey"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="84"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository"
                android:textColor="@color/colorGrey"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_medium"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Silicon Valley"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="38dp"
        android:layout_marginStart="80dp"/>

    <TextView
        android:id="@+id/tv_location_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lives"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_location"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="45dp"
        android:drawableStart="@drawable/location"
        android:drawablePadding="16dp"
        />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="UmeStudio,Co.Ltd"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_location_icon"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="80dp"/>

    <TextView
        android:id="@+id/tv_company_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_company"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="45dp"
        android:drawableStart="@drawable/office_block"
        android:drawablePadding="16dp"
        />

    <TextView
        android:id="@+id/tv_name_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Willy Saputra"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_company_icon"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="80dp"/>

    <TextView
        android:id="@+id/tv_name_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_name_data"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="45dp"
        android:drawableStart="@drawable/user"
        android:drawablePadding="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>